# ddo

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ddo_paper.txt  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
benchmarks/: README.md  claims.md  manifest.json  results-template.csv  results.csv  results.md
benchmarks/ifeval/: README.md  results.md  split-metadata.json  test-ddo.jsonl  test.jsonl  train-ddo.jsonl  train.jsonl  validation-ddo.jsonl  validation.jsonl
benchmarks/ifeval/full-corpus/: README.md  results.md  split-metadata.json  test-ddo.jsonl  test.jsonl  train-ddo.jsonl  train.jsonl  validation-ddo.jsonl  (+1 more)
ddo_optimizer/: __init__.py  cli.py  client.py  core.py  dataset.py  prompts.py  types.py  utils.py
ddo_optimizer/adapters/: __init__.py  deepeval.py
docs/: README.md  architecture.md  benchmarking.md  cli.md  configuration.md  dataset-format.md  deepeval.md  evaluation-adapters.md  github-actions-ci.yml  index.md  integrations.md  javascript.md  jupyter-notebook.md  publishing.md  python.md  quickstart.md  scenarios.md  troubleshooting.md
examples/: dataset.jsonl
notebooks/: ddo_quickstart.ipynb
public/: app.js  index.html  styles.css
python_tests/: test_core.py  test_dataset.py
scripts/: benchmark-table.js  check-docs.js  doctor.js  evaluate-ifeval.py  prepare-ifeval-splits.py  run-ifeval-openrouter.py
src/: dataset.js  ddoEngine.js  env.js  index.js  openaiAdapter.js  prompts.js  server.js  utils.js
test/: library.test.js  utils.test.js
(+5 files in other folders)
